[tool.poetry]
name = "httpbin"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7,<4"
gunicorn = "^20.1.0"
decorator = "^5.1.1"
flask = "^2.2.2"
werkzeug = "^2.2.2"
pyyaml = "^6.0"
flasgger = "^0.9.5"
six = "^1.16.0"
brotli = "^1.0.9"
gevent = "^22.10.2"


[tool.poetry.group.dev.dependencies]
rope = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"